syntax = "proto3";

package proto;
option go_package = "https://github.itu.dk/phhy/DIS2;time";

service Broadcast {
    // =JoinChannel
    rpc CreateStream(Channel) returns (stream Message){}
    // = LeaveChannel
    rpc LeaveStream(Channel) returns (stream Message){}
    // =SendMessage
    rpc BroadcastMessage(Message) returns (MessageResponse) {}
}

message Channel {
    string name = 1;
    // Could also be a User-message type
    string sender_name = 2;
}

message Message {
    string user = 1;
    Channel channel = 2;
    string message = 3;
    int64 timestamp = 4;
}

message MessageResponse {
    string messageResponse = 1;
}

message CloseResponse {
    string leaveResponse = 1;
}